more changes to index

--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -5,6 +5,9 @@
 <title>Insert title here</title>
 </head>
 <body>
-
+	Hello, this is the test of github
+	
+	<br />
+	more code ..
 </body>
 </html>
